# bsuir

./: .gitignore
3sem/PPOIS-labs-3sem/LR1/: conanfile.txt
3sem/PPOIS-labs-3sem/LR3/: Graph.cpp
3sem/PPOIS/LR1/: CMakeLists.txt  Doxyfile
3sem/PPOIS/LR2/: CMakeLists.txt
3sem/PPOIS/LR2/src/: XMLElement.cpp  XMLElement.hpp
3sem/PPOIS/LR2/tests/: test.cpp  test.xml
3sem/PPOIS/LR3/: main.cpp
3sem/mois/lab4/: 1(1).gwf  1.scs  2(1).gwf  2.scs  laba1.scs
3sem/ras/: CMakeLists.txt  main.cpp
4sem/AOIS/lab2/: main.py
4sem/AOIS/lab3/: main.py
4sem/AOIS/rbt/: rbt.py
4sem/LOIS/lab2/: lois2.pl
4sem/PPOIS-labs-spring-2023/LR1/: main.py  state.json
4sem/PPOIS-labs-spring-2023/LR2/: App.py
4sem/PPOIS-labs-spring-2023/LR2_dop/: student.json  test_repository.py
4sem/PPOIS-labs-spring-2023/LR3/: Board.py
4sem/PPOIS/LR2/: student.json
4sem/PPOIS/LR2_dop/: App.py
4sem/PPOIS/LR3/: JewelGame.py  JewelPiece.py  constants.py
4sem/PPOIS/LR4/: cli_main.py  gui_main.py  requirements.txt  state.json
4sem/aois-labs/lab1/: main.py
4sem/aois-labs/lab5/: main.py  pyproject.toml
4sem/aois-labs/lab5/lab5/: utils.py
4sem/aois-labs/lab6/: main.py
4sem/aois-labs/lab7/: main.py
4sem/aois-labs/lab8/: main.py
4sem/aois-labs/rbt/: main.py
4sem/mois/lab1/: mois.scs
4sem/mois/lab2/: isosceles.gwf
5sem/PBZ/: tables.sql  tasks.sql
5sem/PBZ/lab1/: tasks.sql
5sem/PBZ/lab2/: 2.sql  info.sql  pbz_bpmn.bpmn  pbz_er.drawio  pbz_use_case.drawio  tables.sql
5sem/PBZ/lab3/: db.cyp  query.cyp
5sem/SiMZIIS/lab1/: lab.js
5sem/SiMZIIS/lab2/: main.js
(+218 files in other folders)
