[tool.poetry]
name = "lab5"
version = "0.1.0"
description = ""
authors = ["yakimovichilya22 <yakimovichilya12170091@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
